tests/fixtures/pass/coalesce_infer_option_none.sali
let main(): i32 = Option(_).None ?? 42
