tests/fixtures/fail/try_non_container_operand.sali
let answer(): Option(i32) = 42.try

let main(): i32 = answer() ?? 0
